syntax = "proto3";

option csharp_namespace = "BangBangLobby";

import "google/protobuf/empty.proto";

message JoinLobbyRequest {
  string playerName = 1;
}

message JoinLobbyResponse {
  string message = 1;
}

message StartTankSelectionRequest {
  string lobbyId = 1;
}

message TankSelectionRequest {
  string playerId = 1;
  string tankChoice = 2;
}

message TankSelectionResponse {
  string message = 1;
  bool isTurn = 2;
  repeated string playersPicking = 3;
}

service LobbyService {
  rpc JoinLobby (JoinLobbyRequest) returns (JoinLobbyResponse);
  rpc StartTankSelection (StartTankSelectionRequest) returns (google.protobuf.Empty);
  rpc SelectTank (TankSelectionRequest) returns (TankSelectionResponse);
}
